--- a/tmux.conf
+++ b/tmux.conf
@@ -60,23 +60,23 @@ set-option -g set-titles on
 setw -g monitor-activity on
 
 # update interval for status
-set status-interval 1
+set-option -g status-interval 1
 
 # reload config
 bind-key r source-file ~/.tmux.conf \; display-message " Reloaded"
 
-set -g status-right "#[fg=#{onedark_green},bg=#{onedark_black},nounderscore,noitalics]#{pomodoro_st}#[fg=#{onedark_white},bg=#{onedark_black},nounderscore,noitalics]  %H:%m #[fg=#{onedark_visual_grey},bg=#{onedark_black}]#[fg=#{onedark_visual_grey},bg=#{onedark_visual_grey}]#[fg=#{onedark_white}, bg=#{onedark_visual_grey}]#{gpu_status} #[fg=#{onedark_green},bg=#{onedark_visual_grey},nobold,nounderscore,noitalics]#[fg=#{onedark_black},bg=#{onedark_green}] #(cut -d ' ' -f 1-3 /proc/loadavg)#[fg=#{onedark_yellow}, bg=#{onedark_green}]#[fg=#{onedark_red},bg=#{onedark_yellow}]"
-set -g status-left  "#[fg=#{onedark_black},bg=#{onedark_green},bold] #S #{prefix_highlight}#[fg=#{onedark_green},bg=#{onedark_black},nobold,nounderscore,noitalics]"
+set -g status-left  "#[fg=#{black},bg=#{green},bold] #S #{prefix_highlight}#[fg=#{green},bg=#{black},nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#{green},bg=#{black},nounderscore,noitalics]#{pomodoro_st}#[fg=#{white},bg=#{black},nounderscore,noitalics]  %H:%M #[fg=#{visual_grey},bg=#{black}]#[fg=#{visual_grey},bg=#{visual_grey}]#[fg=#{white}, bg=#{visual_grey}]#{gpu_status} #[fg=#{green},bg=#{visual_grey},nobold,nounderscore,noitalics]#[fg=#{black},bg=#{green}] #(cut -d ' ' -f 1-3 /proc/loadavg)#[fg=#{yellow}, bg=#{green}]#[fg=#{red},bg=#{yellow}]"
 
-set -g window-status-format  "#[fg=#{onedark_black},bg=#{onedark_black},nobold,nounderscore,noitalics]#[fg=#{onedark_white},bg=#{onedark_black}] #I  #W #[fg=#{onedark_black},bg=#{onedark_black},nobold,nounderscore,noitalics]"
-set -g window-status-current-format  "#[fg=#{onedark_black},bg=#{onedark_visual_grey},nobold,nounderscore,noitalics]#[fg=#{onedark_white},bg=#{onedark_visual_grey},nobold] #I  #W #[fg=#{onedark_visual_grey},bg=#{onedark_black},nobold,nounderscore,noitalics]"
-
-
+set -g window-status-format  "#[fg=#{black},bg=#{black},nobold,nounderscore,noitalics]#[fg=#{white},bg=#{black}] #I  #W #[fg=#{black},bg=#{black},nobold,nounderscore,noitalics]"
+set -g window-status-current-format  "#[fg=#{black},bg=#{visual_grey},nobold,nounderscore,noitalics]#[fg=#{white},bg=#{visual_grey},nobold] #I  #W #[fg=#{visual_grey},bg=#{black},nobold,nounderscore,noitalics]"
 # Plugins
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'tmux-plugins/tpm'
-run-shell ~/.tmux/plugins/tmux-my-onedark/onedark.tmux
+#run-shell ~/.tmux/plugins/tmux-my-onedark/onedark.tmux
+run-shell ~/.tmux/plugins/tmux-my-tokyonight/tokyonight.tmux
+#run-shell ~/.tmux/plugins/tmux-my-gruvbox/gruvbox.tmux
 run-shell ~/.tmux/plugins/tmux-nvidia-plus/nvidia-plus.tmux
 
 # Pomo
