--- a/tmux.conf
+++ b/tmux.conf
@@ -66,17 +66,17 @@ set-option -g status-interval 1
 bind-key r source-file ~/.tmux.conf \; display-message " Reloaded"
 
 set -g status-left  "#[fg=#{dark_font},bg=#{outer_bg},bold] #S #{prefix_highlight}#[fg=#{outer_bg},bg=#{dark_font},nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#{outer_bg},bg=#{dark_font},nounderscore,noitalics]#{pomodoro_st}#[fg=#{white_font},bg=#{dark_font},nounderscore,noitalics]  %H:%M #[fg=#{visual_grey},bg=#{dark_font}]#[fg=#{visual_grey},bg=#{visual_grey}]#[fg=#{color_font}, bg=#{visual_grey}]#{gpu_status} #[fg=#{outer_bg},bg=#{visual_grey},nobold,nounderscore,noitalics]#[fg=#{dark_font},bg=#{outer_bg}] #(cut -d ' ' -f 1-3 /proc/loadavg)"
+set -g status-right "#[fg=#{outer_bg},bg=#{dark_font},nounderscore,noitalics]#{pomodoro_st}#[fg=#{white_font},bg=#{dark_font},nounderscore,noitalics]  %H:%M #[fg=#{visual_grey},bg=#{dark_font}]#[fg=#{visual_grey},bg=#{visual_grey}]#[fg=#{color_font}, bg=#{visual_grey}]#{gpu_status} #[fg=#{outer_bg},bg=#{visual_grey},nobold,nounderscore,noitalics]#[fg=#{dark_font},bg=#{outer_bg}] #(cut -d ' ' -f 1-3 /proc/loadavg) "
 
 set -g window-status-format  "#[fg=#{dark_font},bg=#{dark_font},nobold,nounderscore,noitalics]#[fg=#{white_font},bg=#{dark_font}] #I  #W #[fg=#{dark_font},bg=#{dark_font},nobold,nounderscore,noitalics]"
 set -g window-status-current-format  "#[fg=#{dark_font},bg=#{visual_grey},nobold,nounderscore,noitalics]#[fg=#{color_font},bg=#{visual_grey},nobold] #I  #W #[fg=#{visual_grey},bg=#{dark_font},nobold,nounderscore,noitalics]"
 # Plugins
-#set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'tmux-plugins/tpm'
-#run-shell ~/.tmux/plugins/tmux-my-onedark/onedark.tmux
-run-shell ~/.tmux/plugins/tmux-my-tokyonight/tokyonight.tmux
-#run-shell ~/.tmux/plugins/tmux-my-gruvbox/gruvbox.tmux
+
+COLORSCHEME="tokyonight" # tokyonight, gruvbox, onedark
+run-shell ~/.tmux/plugins/tmux-my-$COLORSCHEME/$COLORSCHEME.tmux
+
 run-shell ~/.tmux/plugins/tmux-nvidia-plus/nvidia-plus.tmux
 
 # Pomo
